# rfnoc-oot-blocks

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
cmake/Modules/: rfnoc-blocksConfig.cmake
examples/: CMakeLists.txt
icores/: CMakeLists.txt  x410_200_2xAurora100Gbps_rfnoc_image_core.yml
include/rfnoc/blocks/: CMakeLists.txt  config.hpp
include/rfnoc/oot-blocks/: CMakeLists.txt
lib/: CMakeLists.txt
python/: CMakeLists.txt  pyrfnoc-blocks.cpp  setup.py.in
python/rfnoc_blocks/: __init__.py
rfnoc/: CMakeLists.txt
rfnoc/blocks/: aurora.yml
rfnoc/fpga/blocks/: CMakeLists.txt
rfnoc/fpga/oot-blocks/: CMakeLists.txt
